5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4174/executions/1644_2446.log
== SUBMITION (2019-04-16 15:59:04) 
-- CODE:
senha = int(input("digite a senha:"))
p1 = senha//100000
p2 = senha%100000//10000
P3 = senha%10000//100
p4 = senha%1000//100
p5 = senha%100//10
p6 = senha%10
resto = (p2 + p4 + p6) % (p1 + p3 + p5)
if (resto == 0):
else:
	print ("senha invalida")


-- EXECUTION TIME:
0.179161
-- ERROR:
  File "/home/codebench/codes/1644/2446/main.py", line 10
    else:
       ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 15:59:06) 
-- CODE:
senha = int(input("digite a senha:"))
p1 = senha//100000
p2 = senha%100000//10000
P3 = senha%10000//100
p4 = senha%1000//100
p5 = senha%100//10
p6 = senha%10
resto = (p2 + p4 + p6) % (p1 + p3 + p5)
if (resto == 0):
else:
	print ("senha invalida")


-- ERROR:
File "XXXX", line 10
    else:
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-04 17:12:17) 
-- CODE:
senha = int(input("digite a senha:"))
p1 = senha//100000
p2 = senha%100000//10000
P3 = senha%10000//100
p4 = senha%1000//100
p5 = senha%100//10
p6 = senha%10
resto = (p2 + p4 + p6) % (p1 + p3 + p5)
if (resto == 0):
else:
	print ("senha invalida")


-- EXECUTION TIME:
0.786519
-- ERROR:
  File "/home/codebench/codes/1644/2446/main.py", line 10
    else:
       ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-04 17:12:18) 
-- CODE:
senha = int(input("digite a senha:"))
p1 = senha//100000
p2 = senha%100000//10000
P3 = senha%10000//100
p4 = senha%1000//100
p5 = senha%100//10
p6 = senha%10
resto = (p2 + p4 + p6) % (p1 + p3 + p5)
if (resto == 0):
else:
	print ("senha invalida")


-- EXECUTION TIME:
1.32738
-- ERROR:
  File "/home/codebench/codes/1644/2446/main.py", line 10
    else:
       ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-04 17:14:09) 
-- CODE:
x=int (input("numero de 6 digitos: "))

s1=x//100000
s2=(x//10000)%10
s3=(x//1000)%10
s4=(x//100)%10
s5=(x//10)%10
s6=x%10

w=(s2+s4+s6)%(s1+s3+s5)

if w==0:
	print("acesso liberado")
else:
	print("senha invalida")

10
from math import *
R = float(input("raio: "))
x = float(input("altura: "))
N = int(input("numero: "))

V1=4*pi*(R)**3/3
v2=(pi*x**2)*((3*R)-x)/3
be = (V1-v2)

if N==1 :
	mensagem = (v2)
else:
	mensagem = (be)
	
print(round(mensagem,4))
-- EXECUTION TIME:
0.867293
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/2446/main.py", line 19, in <module>
    R = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 17:14:14) 
-- CODE:
x=int (input("numero de 6 digitos: "))

s1=x//100000
s2=(x//10000)%10
s3=(x//1000)%10
s4=(x//100)%10
s5=(x//10)%10
s6=x%10

w=(s2+s4+s6)%(s1+s3+s5)

if w==0:
	print("acesso liberado")
else:
	print("senha invalida")

10
from math import *
R = float(input("raio: "))
x = float(input("altura: "))
N = int(input("numero: "))

V1=4*pi*(R)**3/3
v2=(pi*x**2)*((3*R)-x)/3
be = (V1-v2)

if N==1 :
	mensagem = (v2)
else:
	mensagem = (be)
	
print(round(mensagem,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    R = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-04 17:14:18) 
-- CODE:
x=int (input("numero de 6 digitos: "))

s1=x//100000
s2=(x//10000)%10
s3=(x//1000)%10
s4=(x//100)%10
s5=(x//10)%10
s6=x%10

w=(s2+s4+s6)%(s1+s3+s5)

if w==0:
	print("acesso liberado")
else:
	print("senha invalida")

10
from math import *
R = float(input("raio: "))
x = float(input("altura: "))
N = int(input("numero: "))

V1=4*pi*(R)**3/3
v2=(pi*x**2)*((3*R)-x)/3
be = (V1-v2)

if N==1 :
	mensagem = (v2)
else:
	mensagem = (be)
	
print(round(mensagem,4))
-- EXECUTION TIME:
0.884028
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/2446/main.py", line 19, in <module>
    R = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-04 17:14:59) 
-- CODE:
x=int (input("numero de 6 digitos: "))

s1=x//100000
s2=(x//10000)%10
s3=(x//1000)%10
s4=(x//100)%10
s5=(x//10)%10
s6=x%10

w=(s2+s4+s6)%(s1+s3+s5)

if w==0:
	print("acesso liberado")
else:
	print("senha invalida")
-- EXECUTION TIME:
0.668037
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
